- remerge upstream master - remove ::copy test from XorTest